[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sources/Scripts/HeightMap.gd" type="Script" id=1]
[ext_resource path="res://Sources/Scripts/VegetationMap.gd" type="Script" id=2]
[ext_resource path="res://Sources/Scripts/GameWorld.gd" type="Script" id=3]
[ext_resource path="res://Sources/Scripts/TemperatureMap.gd" type="Script" id=4]
[ext_resource path="res://Sources/Scripts/HumidityMap.gd" type="Script" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="HeightMap" type="Node" parent="."]
script = ExtResource( 1 )

[node name="HumidityMap" type="Node" parent="."]
script = ExtResource( 5 )

[node name="TemperatureMap" type="Node" parent="."]
script = ExtResource( 4 )

[node name="VegetationMap" type="Node" parent="."]
script = ExtResource( 2 )
